# ChainHound

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
chainhound/: __init__.py  bridges.py  cli.py  config.py  db.py  models.py
chainhound/analysis/: __init__.py  crosschain.py  decode.py  exposure.py  trace.py  triage.py
chainhound/connectors/: __init__.py  base.py  bigquery_btc.py  blockstream_btc.py  evm.py
chainhound/heuristics/: __init__.py  change_analysis.py  clustering.py  coinjoin.py  peel_chain.py
chainhound/labels/: __init__.py  base.py  chainabuse.py  chains.py  ofac.py  ondemand.py  repo.py  sources.py  store.py  tagpacks.py
chainhound/loaders/: __init__.py  base.py  chainabuse.py  ofac.py  ratelimit.py  tagpacks.py
chainhound_server/: __init__.py  __main__.py  app.py  cases.py  deps.py  detectors.py  export.py  monitor.py  poller.py  routes.py  schemas.py  store.py  watches.py
chainhound_server/static/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  DESIGN.md  DETECTION_SIGNATURES.md  ROADMAP.md  VALIDATION.md
sql/: schema.sql
tests/: test_address_normalization.py  test_bridges.py  test_change_analysis.py  test_crosschain.py  test_decode.py  test_evm_connector.py  test_exposure.py  test_labels_chainabuse.py  test_labels_integration.py  test_labels_ofac.py  test_labels_ondemand.py  test_labels_repo.py  test_labels_store.py  test_labels_tagpacks.py  test_loaders.py  test_peel_chain.py  test_trace_evm_guard.py  test_triage_labels.py
tests/Validation/: harness.py  test_validation.py
(+21 files in other folders)
