[project]
name = "chainhound"
version = "0.1.0"
description = "Deterministic-first, open-source on-chain forensics toolkit"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
live = ["requests>=2.31", "pyyaml>=6"]
bigquery = ["google-cloud-bigquery>=3.20"]
db = ["psycopg[binary]>=3.1"]
dev = ["pytest>=8.0", "pyyaml>=6"]

[project.scripts]
chainhound = "chainhound.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chainhound*"]
