[project]
name = "chainhound"
version = "0.1.0"
description = "Deterministic-first, open-source on-chain forensics toolkit"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
live = ["requests>=2.31"]
labels = ["requests>=2.31", "pyyaml>=6"]
bigquery = ["google-cloud-bigquery>=3.20"]
db = ["psycopg[binary]>=3.1"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
chainhound = "chainhound.cli:main"
chainhound-server = "chainhound_server.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chainhound*", "chainhound_server*"]

[tool.setuptools.package-data]
chainhound_server = ["static/*"]
